--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Klaasvaakie (|/)",
+  "license": "PROPRIETARY",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
